# sshfs-rs

./: Cargo.toml  README.md  Report.md  flake.nix  result
client/: Cargo.toml  README.md
client/src/: filesystem.rs  hello.rs  lib.rs  main.rs  sftp_client.rs
desktop/: Cargo.toml
desktop/src/: main.rs
server/: Cargo.toml  README.md
server/src/: audit.rs  auth.rs  database.rs  fs.rs  main.rs  sftp_server.rs
