[package]
name = "sshfs-rs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
bincode = "1.3.3"
clap = "4.5.17"
env_logger = "0.11.5"
fuser = "0.14.0"
itertools = "0.13.0"
libc = "0.2.158"
log = "0.4.22"
russh = "0.45.0"
russh-keys = "0.45.0"
russh-sftp = "2.0.3"
serde = "1.0.210"
ssh2 = "0.9.4"
tokio = "1.40.0"
# 添加服务端依赖项
