[package]
name = "sshfs-rs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
bcrypt = "0.15.1"
chrono = "0.4.38"
clap = "4.5.18"
env_logger = "0.11.5"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
russh = "0.45.0"
russh-keys = "0.45.0"
russh-sftp = "2.0.3"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
users = "0.11.0"
